welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:4: error: not found: value estSurBaggle
  for (i<-1 to 5) {avance(); if (estSurBaggle()) {FoundBaggles=FoundBaggles+1}}
                                 ^